--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -11,7 +11,7 @@
     </div>
   
     <div class="form-group text-center">
-      <button (click)="register()" class="btn btn-success" type="submit">Register</button>
+      <button class="btn btn-success" type="submit">Register</button>
       <button (click)="cancel()" class="btn btn-default" type="button">Cancel</button>
     </div>
     
