--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,10 @@
-<div class="container">
+<div class="container mt-4">
+  <div class="row ml-1">
+    <h1>{{user.knownAs}}</h1>
+  </div>
   <div class="row">
     <div class="col-sm-4">
-      <div class="card mt-4">
+      <div class="card">
         <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
