--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
           <div class="card-body">
             <div>
               <strong>Location:</strong>
@@ -46,23 +46,23 @@
                   <h4>Description</h4>
                   <textarea name="introduction" rows="6" class="form-control" 
                   [(ngModel)]="user.introduction"></textarea>
-                  <h4>Looking For</h4>
+                  <h4 class="mt-2">Looking For</h4>
                   <textarea name="lookingFor" rows="6" class="form-control" 
                   [(ngModel)]="user.lookingFor"></textarea>
-                  <h4>Interests</h4>
+                  <h4 class="mt-2">Interests</h4>
                   <textarea name="interests" rows="6" class="form-control"
                   [(ngModel)]="user.interests"></textarea>
-                  <h4>Location Details</h4>
+                  <h4 class="mt-2">Location Details</h4>
                   <div class="form-inline">
-                    <label for="city">City</label>
-                    <input type="text" class="form-control" name="city" [(ngModel)]="user.city">
-                    <label for="country">Country</label>
-                    <input type="text" class="form-control" name="country" [(ngModel)]="user.country">
+                    <label for="city">City:</label>
+                    <input type="text" class="form-control ml-1" name="city" [(ngModel)]="user.city">
+                    <label class="ml-2" for="country">Country:</label>
+                    <input type="text" class="form-control ml-1" name="country" [(ngModel)]="user.country">
                   </div>    
                 </form>
             </tab>
             <tab heading="Edit Photos">
-              <p>Photo edit here</p>
+              <app-photo-editor [photos]=user.photos (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
             </tab>
           </tabset>
         </div>
